// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/ProfilePage failure during password reset 1`] = `
<div>
  <div
    className="dnTGWH"
  >
    <div
      className="djUbXD"
    >
      <div
        className="iBTcsR"
      >
        <form
          onSubmit={[Function]}
        >
          <label
            className="geijem"
            htmlFor="email-address"
          >
            Email
          </label>
          <input
            className="gEZOsv"
            id="email-address"
            name="email"
            onChange={[Function]}
            type="text"
            value="email@email.email"
          />
          <div>
            <button
              className="fTwoQp"
              type="submit"
            >
              Save email address
            </button>
          </div>
        </form>
        <section
          className="dEsRUZ"
        >
          <p
            className="hQXFog"
          >
            Change password
          </p>
          <p>
            <span>
              To change your password follow the instructions in the password reset email.
            </span>
          </p>
          <button
            className="cHnBIQ"
            onClick={[Function]}
            type="button"
          >
            Send password reset email
          </button>
          <p
            className="fpGphL"
            role="alert"
          >
            An error occurred while sending password reset.
          </p>
        </section>
      </div>
      <div
        className="iBTcsR"
      >
        <p
          className="hQXFog"
        >
          Profile picture
        </p>
        <p>
          <span>
            Your profile picture is supplied by Gravatar. If you don't have an account with them yet, or want to change your existing picture, please visit the 
            <a
              href="https://gravatar.com"
              target="_blank"
            >
              Gravatar website
            </a>
            .
          </span>
        </p>
        
      </div>
    </div>
  </div>
  <div
    className="dnTGWH"
  >
    <div
      className="cxrbkq"
    >
      <button
        aria-expanded={false}
        className="gCGqdM"
        onClick={[Function]}
      >
        <span
          className="ioaeUl"
        >
          Danger zone
        </span>
        <svg
          fill="#555"
          height={40}
          viewBox="0 0 24 24"
          width={40}
        >
          <path
            d="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`components/ProfilePage failure during profile save 1`] = `
<div>
  <div
    className="dnTGWH"
  >
    <div
      className="djUbXD"
    >
      <div
        className="iBTcsR"
      >
        <form
          onSubmit={[Function]}
        >
          <label
            className="geijem"
            htmlFor="email-address"
          >
            Email
          </label>
          <input
            className="gEZOsv"
            id="email-address"
            name="email"
            onChange={[Function]}
            type="text"
            value="email@email.email"
          />
          <p
            className="fpGphL"
            role="alert"
          >
            An error occurred while saving profile.
          </p>
          <div>
            <button
              className="fTwoQp"
              type="submit"
            >
              Save email address
            </button>
          </div>
        </form>
        <section
          className="dEsRUZ"
        >
          <p
            className="hQXFog"
          >
            Change password
          </p>
          <p>
            <span>
              To change your password follow the instructions in the password reset email.
            </span>
          </p>
          <button
            className="cHnBIQ"
            onClick={[Function]}
            type="button"
          >
            Send password reset email
          </button>
        </section>
      </div>
      <div
        className="iBTcsR"
      >
        <p
          className="hQXFog"
        >
          Profile picture
        </p>
        <p>
          <span>
            Your profile picture is supplied by Gravatar. If you don't have an account with them yet, or want to change your existing picture, please visit the 
            <a
              href="https://gravatar.com"
              target="_blank"
            >
              Gravatar website
            </a>
            .
          </span>
        </p>
        
      </div>
    </div>
  </div>
  <div
    className="dnTGWH"
  >
    <div
      className="cxrbkq"
    >
      <button
        aria-expanded={false}
        className="gCGqdM"
        onClick={[Function]}
      >
        <span
          className="ioaeUl"
        >
          Danger zone
        </span>
        <svg
          fill="#555"
          height={40}
          viewBox="0 0 24 24"
          width={40}
        >
          <path
            d="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`components/ProfilePage has sent password reset 1`] = `
<div>
  <div
    className="dnTGWH"
  >
    <div
      className="djUbXD"
    >
      <div
        className="iBTcsR"
      >
        <form
          onSubmit={[Function]}
        >
          <label
            className="geijem"
            htmlFor="email-address"
          >
            Email
          </label>
          <input
            className="gEZOsv"
            id="email-address"
            name="email"
            onChange={[Function]}
            type="text"
            value="email@email.email"
          />
          <div>
            <button
              className="fTwoQp"
              type="submit"
            >
              Save email address
            </button>
          </div>
        </form>
        <section
          className="dEsRUZ"
        >
          <p
            className="hQXFog"
          >
            Change password
          </p>
          <p>
            <span>
              To change your password follow the instructions in the password reset email.
            </span>
          </p>
          <button
            className="cHnBIQ"
            onClick={[Function]}
            type="button"
          >
            Send password reset email
          </button>
          <p
            className="bIVyUv"
          >
            An email has been sent, please check your inbox.
          </p>
        </section>
      </div>
      <div
        className="iBTcsR"
      >
        <p
          className="hQXFog"
        >
          Profile picture
        </p>
        <p>
          <span>
            Your profile picture is supplied by Gravatar. If you don't have an account with them yet, or want to change your existing picture, please visit the 
            <a
              href="https://gravatar.com"
              target="_blank"
            >
              Gravatar website
            </a>
            .
          </span>
        </p>
        
      </div>
    </div>
  </div>
  <div
    className="dnTGWH"
  >
    <div
      className="cxrbkq"
    >
      <button
        aria-expanded={false}
        className="gCGqdM"
        onClick={[Function]}
      >
        <span
          className="ioaeUl"
        >
          Danger zone
        </span>
        <svg
          fill="#555"
          height={40}
          viewBox="0 0 24 24"
          width={40}
        >
          <path
            d="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`components/ProfilePage saving profile 1`] = `
<div>
  <div
    className="dnTGWH"
  >
    <div
      className="djUbXD"
    >
      <div
        className="iBTcsR"
      >
        <form
          onSubmit={[Function]}
        >
          <label
            className="geijem"
            htmlFor="email-address"
          >
            Email
          </label>
          <input
            className="gEZOsv"
            id="email-address"
            name="email"
            onChange={[Function]}
            type="text"
            value="email@email.email"
          />
          <div>
            <button
              className="fTwoQp"
              type="submit"
            >
              Save email address
            </button>
            <p
              className="fCYIZc"
            >
              Saving...
            </p>
          </div>
        </form>
        <section
          className="dEsRUZ"
        >
          <p
            className="hQXFog"
          >
            Change password
          </p>
          <p>
            <span>
              To change your password follow the instructions in the password reset email.
            </span>
          </p>
          <button
            className="cHnBIQ"
            onClick={[Function]}
            type="button"
          >
            Send password reset email
          </button>
        </section>
      </div>
      <div
        className="iBTcsR"
      >
        <p
          className="hQXFog"
        >
          Profile picture
        </p>
        <p>
          <span>
            Your profile picture is supplied by Gravatar. If you don't have an account with them yet, or want to change your existing picture, please visit the 
            <a
              href="https://gravatar.com"
              target="_blank"
            >
              Gravatar website
            </a>
            .
          </span>
        </p>
        
      </div>
    </div>
  </div>
  <div
    className="dnTGWH"
  >
    <div
      className="cxrbkq"
    >
      <button
        aria-expanded={false}
        className="gCGqdM"
        onClick={[Function]}
      >
        <span
          className="ioaeUl"
        >
          Danger zone
        </span>
        <svg
          fill="#555"
          height={40}
          viewBox="0 0 24 24"
          width={40}
        >
          <path
            d="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`components/ProfilePage sending password reset 1`] = `
<div>
  <div
    className="dnTGWH"
  >
    <div
      className="djUbXD"
    >
      <div
        className="iBTcsR"
      >
        <form
          onSubmit={[Function]}
        >
          <label
            className="geijem"
            htmlFor="email-address"
          >
            Email
          </label>
          <input
            className="gEZOsv"
            id="email-address"
            name="email"
            onChange={[Function]}
            type="text"
            value="email@email.email"
          />
          <div>
            <button
              className="fTwoQp"
              type="submit"
            >
              Save email address
            </button>
          </div>
        </form>
        <section
          className="dEsRUZ"
        >
          <p
            className="hQXFog"
          >
            Change password
          </p>
          <p>
            <span>
              To change your password follow the instructions in the password reset email.
            </span>
          </p>
          <button
            className="cHnBIQ"
            onClick={[Function]}
            type="button"
          >
            Send password reset email
          </button>
          <p
            className="fCYIZc"
          >
            Sending email...
          </p>
        </section>
      </div>
      <div
        className="iBTcsR"
      >
        <p
          className="hQXFog"
        >
          Profile picture
        </p>
        <p>
          <span>
            Your profile picture is supplied by Gravatar. If you don't have an account with them yet, or want to change your existing picture, please visit the 
            <a
              href="https://gravatar.com"
              target="_blank"
            >
              Gravatar website
            </a>
            .
          </span>
        </p>
        
      </div>
    </div>
  </div>
  <div
    className="dnTGWH"
  >
    <div
      className="cxrbkq"
    >
      <button
        aria-expanded={false}
        className="gCGqdM"
        onClick={[Function]}
      >
        <span
          className="ioaeUl"
        >
          Danger zone
        </span>
        <svg
          fill="#555"
          height={40}
          viewBox="0 0 24 24"
          width={40}
        >
          <path
            d="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`components/ProfilePage the default case 1`] = `
<div>
  <div
    className="dnTGWH"
  >
    <div
      className="djUbXD"
    >
      <div
        className="iBTcsR"
      >
        <form
          onSubmit={[Function]}
        >
          <label
            className="geijem"
            htmlFor="email-address"
          >
            Email
          </label>
          <input
            className="gEZOsv"
            id="email-address"
            name="email"
            onChange={[Function]}
            type="text"
            value="test@test.test"
          />
          <div>
            <button
              className="fTwoQp"
              type="submit"
            >
              Save email address
            </button>
          </div>
        </form>
        <section
          className="dEsRUZ"
        >
          <p
            className="hQXFog"
          >
            Change password
          </p>
          <p>
            <span>
              To change your password follow the instructions in the password reset email.
            </span>
          </p>
          <button
            className="cHnBIQ"
            onClick={[Function]}
            type="button"
          >
            Send password reset email
          </button>
        </section>
      </div>
      <div
        className="iBTcsR"
      >
        <p
          className="hQXFog"
        >
          Profile picture
        </p>
        <p>
          <span>
            Your profile picture is supplied by Gravatar. If you don't have an account with them yet, or want to change your existing picture, please visit the 
            <a
              href="https://gravatar.com"
              target="_blank"
            >
              Gravatar website
            </a>
            .
          </span>
        </p>
        <img
          alt=""
          className="gZEvir"
          size="120px"
          src="dummy.png"
        />
      </div>
    </div>
  </div>
  <div
    className="dnTGWH"
  >
    <div
      className="cxrbkq"
    >
      <button
        aria-expanded={false}
        className="gCGqdM"
        onClick={[Function]}
      >
        <span
          className="ioaeUl"
        >
          Danger zone
        </span>
        <svg
          fill="#555"
          height={40}
          viewBox="0 0 24 24"
          width={40}
        >
          <path
            d="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`components/ProfilePage while deleting the account 1`] = `
<div>
  <div
    className="dnTGWH"
  >
    <div
      className="djUbXD"
    >
      <div
        className="iBTcsR"
      >
        <form
          onSubmit={[Function]}
        >
          <label
            className="geijem"
            htmlFor="email-address"
          >
            Email
          </label>
          <input
            className="gEZOsv"
            id="email-address"
            name="email"
            onChange={[Function]}
            type="text"
            value="email@email.email"
          />
          <div>
            <button
              className="fTwoQp"
              type="submit"
            >
              Save email address
            </button>
          </div>
        </form>
        <section
          className="dEsRUZ"
        >
          <p
            className="hQXFog"
          >
            Change password
          </p>
          <p>
            <span>
              To change your password follow the instructions in the password reset email.
            </span>
          </p>
          <button
            className="cHnBIQ"
            onClick={[Function]}
            type="button"
          >
            Send password reset email
          </button>
          <p
            className="fpGphL"
            role="alert"
          >
            An error occurred while sending password reset.
          </p>
        </section>
      </div>
      <div
        className="iBTcsR"
      >
        <p
          className="hQXFog"
        >
          Profile picture
        </p>
        <p>
          <span>
            Your profile picture is supplied by Gravatar. If you don't have an account with them yet, or want to change your existing picture, please visit the 
            <a
              href="https://gravatar.com"
              target="_blank"
            >
              Gravatar website
            </a>
            .
          </span>
        </p>
        
      </div>
    </div>
  </div>
  <div
    className="dnTGWH"
  >
    <div
      className="cxrbkq"
    >
      <button
        aria-expanded={false}
        className="gCGqdM"
        onClick={[Function]}
      >
        <span
          className="ioaeUl"
        >
          Danger zone
        </span>
        <svg
          fill="#555"
          height={40}
          viewBox="0 0 24 24"
          width={40}
        >
          <path
            d="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;
